# VampyreBot

./: .gitignore  README.md  main.py  pyproject.toml
cogs/: chance.py  data.py  shortcuts.py  time.py  transfer.py
cogs/orm/: database_connection.py  models.py
