[tool.poetry]
name = "repl_python3_VampyreBot"
version = "0.1.0"
description = ""
authors = ["DeepJam <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.29"
discord = "^1.7.3"
Flask = "^2.0.2"
pytz = "^2021.3"
reactionmenu = "^2.0.3"
discord-better-help = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
